# databricks-lakehouse

./: .gitignore  databricks.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: cicd.yml
docs/: roadmap.md
docs/adr/: 0001-lakeflow-jobs-over-airflow.md  0002-lakehouse-namespace-modeling.md
resources/: trips_pipeline.job.yml
src/mobility/: silver.py
src/mobility/infra/: setup.py
src/mobility/trips/: bronze.py  gold.py
src/trips/: bronze.py  gold.py  setup.py  silver.py
tests/: sample_taxis_test.py  test_silver.py
