[project]
name = "mobility"
version = "0.0.1"
authors = [{ name = "douglas-nog" }]
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyspark==4.0.*",
]
connect = [
    "databricks-connect==17.3.*",
]

[project.scripts]
setup-uc = "mobility.setup:main"
ingest-bronze = "mobility.bronze:main"
transform-silver = "mobility.silver:main"
build-gold = "mobility.gold:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mobility"]

[tool.ruff]
line-length = 120